--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
+    "prepare-commit-msg": "npx exec < /dev/tty && git cz --hook || true",
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
     "pre-commit": "lerna run --parallel precommit"
   }
